--- a/tw-driver/tw-driver/src/main/resources/application.yml
+++ b/tw-driver/tw-driver/src/main/resources/application.yml
@@ -17,6 +17,10 @@ spring:
     show-sql: true
 
 
+  redis:
+    host: 127.0.0.1     # Redis server host (default: localhost)
+    port: 6379
+
 eureka:
   instance:
     prefer-ip-address: true
